# word2box

./: .gitmodules  README.md  ReadMe.txt  fastentrypoints.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/ptb/: input.txt  ptbaa  ptbab  ptbac  ptbad  ptbae  train.5k.txt  train_tokenized.pkl  vocab_freq.json  vocab_stoi.json
data/ptb/splits/: ptbab  ptbac  ptbad  ptbae
data/similarity_datasets/: EN-MEN-TR-3k.txt  EN-MTurk-287.txt  EN-MTurk-771.txt  EN-RW-STANFORD.txt  EN-SIMLEX-999.txt  EN-SimVerb-3500.txt  EN-VERB-143.txt  EN-WS-353-ALL.txt  EN-WS-353-REL.txt  EN-WS-353-SIM.txt  EN-YP-130.txt
src/: README.md
src/language_modeling_with_boxes/: __main__.py
src/language_modeling_with_boxes/box/: box_wrapper.py  modules.py  utils.py
src/language_modeling_with_boxes/datasets/: utils.py  word2vecgpu.py
src/language_modeling_with_boxes/models/: BaseModule.py  __init__.py  word2box.py  word2gauss.py  word2vec.py
src/language_modeling_with_boxes/train/: Trainer.py  __main__.py  loss.py  negative_sampling.py  train.py
