[metadata]
name = language_modeling_with_boxes
version = 0.0.1
description = Using boxes for word representations

[options]
packages = find:
install_requires =
    click>=7.0
    attrs
    toml
    torchtext==0.8.1
    tqdm
    xopen
    loguru
    typer[all]
package_dir=
    =src

[options.packages.find]
where=src
exclude=*.tests, *.tests.*, tests.*, tests

[options.entry_points]
console_scripts =
    language-modeling-with-boxes = language_modeling_with_boxes.__main__:main
